Now using TURLs when Prefetcher is used

--- a/CHANGES
+++ b/CHANGES
@@ -89,6 +89,13 @@ M movers/mover.py (13)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+71.1
+
+General changes:
+- Now using TURLs for input in payload options when Prefetcher is used (RunJobEvent)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
