Replacing LFNs with TURLs for direct access prod jobs

--- a/CHANGES
+++ b/CHANGES
@@ -93,6 +93,7 @@ M movers/mover.py (13)
 
 General changes:
 - Added TURL to file state dictionary in stagein_real(), needed for direct access in prod jobs (mover)
+- Now using proper job.isAnalysisJob() in __main__() (RunJob)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
