--- a/CHANGES
+++ b/CHANGES
@@ -95,6 +95,10 @@ General changes:
 - Added TURL to file state dictionary in stagein_real(), needed for direct access in prod jobs (mover)
 - Now using proper job.isAnalysisJob() in __main__() (RunJob)
 
+Now using associated storages when looking up replicas by getting all associated endpoints from astorages
+- Using resolvePandaAssociatedStorages() instead of _prepare_input_ddm() in resolve_replicas() (mover)
+- As discussed in thread "Multiple read DATADISK per PQ"
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
