--- a/CHANGES
+++ b/CHANGES
@@ -2,94 +2,7 @@ Complete change log for the Pilot 1
 -----------------------------------
 
 
-71.0
-
-General changes:
-- Remover deprecated function updateCmd1WithProject() (ATLASExperiment)
-- Corrected overwriting of bad cpuConsumptionTime in BOINC jobs in getNodeStructure() (PandaServerClient)
-- Added back missing taskid in the tracing report (movers/trace_report)
-- Corrected timeGetJob, removed code from wrong place (pilot, Monitor)
-- Fixed bug where local file was not deleted after partial stage-in, in _stagefile() (lsm_sitemover)
-- Now killing job if used memory > 2*RSS for all sites (before only on non-cgroups sites), in __check_memory_usage() (Monitor)
-
-Containers
-- Updated extractSingularityOptions() to use container_options field instead of catchall, if it exists (Singularity)
-- Created getContainerName() (Singularity)
-
-LAN/WAN updates:
-- Created detect_client_location() and printing out the dictionary in the log (pilot)
-- Using new version of list_replicas() if possible, that supports geoip sorting, resolve_replicas() (mover)
-
-Event service:
-- Added support for new job def variable usePrefetcher in setJobDef() (Job)
-- Renamed variable prefetcher to usePrefetcher (Job, RunJobEvent)
-- Updated setUsePrefetcher() to use new usePrefetcher variable (RunJobEvent)
-
-Updates from Wen Guan:
-
-  https://github.com/PanDAWMS/pilot/pull/162
-
-Commit Summary
-
-refactored objectstore sitemover
-added option to disable logsToOS
-fixed one issue
-
-File Changes
-
-M ATLASExperiment.py (2)
-M RunJobEvent.py (2)
-M movers/objectstore_sitemover.py (70)
-
-Updates from Alexey Anisenkov
-
-  https://github.com/PanDAWMS/pilot/pull/164
-
-Updates of sitemovers stage-out workflow:
-
-- Skip removal of remote file if given file already exists at storage
-- Try to continue stageout step of file validation by checksum/filesize if given file already exists in storage.
-  In case of validation error fail stageout with FILEEXIST error
-- Skip further transfer attempts in case of file exists error
-- Fixed typo bug in processes.py (undefined variable)
-
-Commit Summary
-
-stageout workflow updates:
-fixed typo bug in process.py (undefined variable)
-stage-out fixes
-sitemovers: add verbose message
-
-File Changes
-
-M movers/base.py (36)
-M movers/mover.py (5)
-M processes.py (11)
-
-  https://github.com/PanDAWMS/pilot/pull/165
-
-Commit Summary
-
-Fixed logic in look-up of default copytool: consider only copytools explicitly defined for all activities
-
-File Changes
-
-M SiteInformation.py (12)
-
-  https://github.com/PanDAWMS/pilot/pull/166
-
-Commit Summary
-
-JobMover: extend stage-out logic to support ordered list of activities to look up sitemovers to be used for transfer.
-
-File Changes
-
-M SiteInformation.py (11)
-M movers/mover.py (13)
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-71.1
+72.0
 
 General changes:
 - Added TURL to file state dictionary in stagein_real(), needed for direct access in prod jobs (mover)
@@ -135,6 +48,44 @@ M Mover.py (7)
 M RunJobEvent.py (261)
 M SiteInformation.py (52)
 M movers/mover.py (29)
+
+ https://github.com/PanDAWMS/pilot/pull/168
+
+Commit Summary
+
+in pilotErrorDiag report 'AllSuccess' when all events finish, to distinguish with lost heartbeat cases.
+implement maxtime and softkill for es
+to use "pr" activtiy to stagein local es premerge files
+fail pilot if continously stageout fails
+
+File Changes
+
+M RunJobEvent.py (4)
+
+  https://github.com/PanDAWMS/pilot/pull/171
+
+Commit Summary
+
+clean some old codes
+
+File Changes
+
+M RunJobEvent.py (56)
+
+Updates from Nicolo Magini
+
+  https://github.com/PanDAWMS/pilot/pull/169
+
+Rely only on inFilePosEvtNum flag from PanDA instead.
+Fix for https://its.cern.ch/jira/browse/ATLASPANDA-409
+
+Commit Summary
+
+Do not assume in-file positional event ranges for prefetcher
+
+File Changes
+
+M RunJobEvent.py (2)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
