--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@ General changes:
 - Corrected exception handling in getContainerName() (Singularity)
 - Removed sitename from detect_client_location, and from all it's calls (via stagein()), replaced with readpar (mover)
 - Added movers to redundancy list in removeRedundantFiles() (ATLASExperiment)
+- Now using isRootFileName() in is_directaccess() to determine whether the file is a root file or not (Job)
 
 Now using associated storages when looking up replicas by getting all associated endpoints from astorages
 - Using resolvePandaAssociatedStorages() instead of _prepare_input_ddm() in resolve_replicas() (mover)
