--- a/CHANGES
+++ b/CHANGES
@@ -288,6 +288,18 @@ M movers/storm_sitemover.py (8)
 General changes:
 ..
 
+Updates from Wen Guan:
+
+  https://github.com/PanDAWMS/pilot/pull/186
+
+Commit Summary
+
+fix pandaproxy usage
+
+File Changes
+
+M RunJobEvent.py (4)
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
