--- a/CHANGES
+++ b/CHANGES
@@ -300,6 +300,16 @@ File Changes
 
 M RunJobEvent.py (4)
 
+  https://github.com/PanDAWMS/pilot/pull/187
+
+Commit Summary
+
+updated ways to resolve storages
+
+File Changes
+
+M RunJobEvent.py (6)
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
