--- a/CHANGES
+++ b/CHANGES
@@ -287,6 +287,7 @@ M movers/storm_sitemover.py (8)
 
 General changes:
 - Updated base path to containers (atlas.cern.ch/repo/containers/images/singularity) in getGridImageForSingularity() (Singularity)
+- Updated default container platform to x86_64-centos6 (Singularity)
 
 Updates from Wen Guan:
 
