Updated comments and version string

--- a/CHANGES
+++ b/CHANGES
@@ -362,6 +362,27 @@ M RunJobEvent.py (8)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+72.3
+
+Support for Harvester job request file:
+
+
+Updates from Wen Guan:
+
+  https://github.com/PanDAWMS/pilot/pull/190
+
+Commit Summary
+
+to kill AthenaMP if it doesn't response in max_wait
+fix one state which caused RunJobHpcEvent to be killed before finishing all tails
+
+File Changes
+
+M RunJobEvent.py (9)
+RunJobHpcEvent
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
