--- a/CHANGES
+++ b/CHANGES
@@ -365,7 +365,9 @@ M RunJobEvent.py (8)
 72.3
 
 Support for Harvester job request file:
-
+Added new pilot option -S to activate Harvester mode (pilot)
+Added new variable, harvester (environment)
+getJob() updated for new harvester mode (pilot)
 
 Updates from Wen Guan:
 
@@ -380,6 +382,16 @@ File Changes
 
 M RunJobEvent.py (9)
 RunJobHpcEvent
+
+  https://github.com/PanDAWMS/pilot/pull/191
+
+Commit Summary
+
+update max wait for one time from 30 minutes to 6 hours
+
+File Changes
+
+M RunJobEvent.py (18)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
