Updated version and added a touch() function

--- a/CHANGES
+++ b/CHANGES
@@ -397,6 +397,13 @@ M RunJobEvent.py (18)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+72.4
+
+Support for Harvester kill_worker:
+- ..
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
