--- a/CHANGES
+++ b/CHANGES
@@ -400,7 +400,8 @@ M RunJobEvent.py (18)
 72.4
 
 Support for Harvester kill_worker:
-- ..
+- Created touch() (FileHandling)
+- Created kill_worker(), called at the end of the pilot in Harvester mode (pilot)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
