--- a/CHANGES
+++ b/CHANGES
@@ -403,6 +403,9 @@ Support for Harvester kill_worker:
 - Created touch() (FileHandling)
 - Created kill_worker(), called at the end of the pilot in Harvester mode (pilot)
 
+Memory monitoring
+- Due to bugs in several late releases, only release 21.0.22 is currently used to setup MemoryMonitor, getUtilityCommand() (ATLASExperiment)
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
