Using release 21.0.22 (only) to setup MemoryMonitor

--- a/CHANGES
+++ b/CHANGES
@@ -397,6 +397,12 @@ M RunJobEvent.py (18)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+72.4
+
+Memory monitoring
+- Due to bugs in several late releases, only release 21.0.22 is currently used to setup MemoryMonitor, getUtilityCommand() (ATLASExperiment)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 TODO:
 
