Added domain=lan to list_replicas() for testing at BNL

--- a/CHANGES
+++ b/CHANGES
@@ -534,6 +534,7 @@ M pilot.py (13)
 
 PoolFileCatalog simplification
 - Removal of LFN from PFC - TODO
+- USING DOMAIN='LAN' WITH LIST_REPLICAS()
 
 Updates from Alexander Bogdanchikov
 
