Now extracting LFN from PFN in getFileInfoFromXML()

--- a/CHANGES
+++ b/CHANGES
@@ -537,6 +537,7 @@ PoolFileCatalog simplification
 - USING DOMAIN='LAN' WITH LIST_REPLICAS()
 - Removed useless overrideLogical from PFC creation (pUtil)
 - Removed forceLogical option in PFC creation calls (Mover)
+- Now extracting LFN from PFN in getFileInfoFromXML() (Mover)
 
 Updates from Alexander Bogdanchikov
 
