Updated comments and pilot version

--- a/CHANGES
+++ b/CHANGES
@@ -530,6 +530,22 @@ M pilot.py (13)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+72.7 - HOTFIX
+
+Updates from Mario Lassnig:
+
+  https://github.com/PanDAWMS/pilot/pull/205
+
+Commit Summary
+
+Update rucio_sitemover.py
+
+File Changes
+
+M movers/rucio_sitemover.py (9)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
