Remeasured size of workdir

--- a/CHANGES
+++ b/CHANGES
@@ -625,6 +625,14 @@ M RunJobEvent.py (10)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+72.9
+
+Size of workdir reporting
+- Remeasuring the size of the workdir in __checkWorkDir() to fix a bad log message and also to avoid sending a wrong value to the job metrics.
+  Requested by R. Walker. (Monitor)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
