--- a/CHANGES
+++ b/CHANGES
@@ -631,6 +631,19 @@ Size of workdir reporting
 - Remeasuring the size of the workdir in __checkWorkDir() to fix a bad log message and also to avoid sending a wrong value to the job metrics.
   Requested by R. Walker. (Monitor)
 
+Updates from Wen Guan:
+
+  https://github.com/PanDAWMS/pilot/pull/206
+
+Commit Summary
+
+comment pfn postexec appending athenaMP
+(Removed postExec AthenaMP option for PoolFileCatalog)
+
+File Changes
+
+M RunJobHpcEvent.py (5)
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 TODO:
