--- a/CHANGES
+++ b/CHANGES
@@ -633,6 +633,7 @@ Size of workdir reporting
 
 Zipmapping
 - Moved removal of input files to after archive creation (RunJob)
+- Added allowZip64=True to zipfile.ZipFile() in createArchives() (RunJob)
 
 Updates from Wen Guan:
 
