Executing dummy sleep command instead of Archive_tf

--- a/CHANGES
+++ b/CHANGES
@@ -636,6 +636,7 @@ Zipmapping
 - Added allowZip64=True to zipfile.ZipFile() in createArchives() (RunJob)
 - Updated addArchivesToOutput() to use input files (Job)
 - Avoiding adding archive to outFiles if it is already listed as an output file, in addArchivesToOutput() (Job)
+- Executing a dummy sleep command instead of Archive_tf in executePayload() (RunJob)
 
 Updates from Wen Guan:
 
