--- a/CHANGES
+++ b/CHANGES
@@ -637,6 +637,7 @@ Zipmapping
 - Updated addArchivesToOutput() to use input files (Job)
 - Avoiding adding archive to outFiles if it is already listed as an output file, in addArchivesToOutput() (Job)
 - Executing a dummy sleep command instead of Archive_tf in executePayload() (RunJob)
+- Patched for missing metadata in updatePandaServer() for archive job (PandaServerClient)
 
 Updates from Wen Guan:
 
