--- a/CHANGES
+++ b/CHANGES
@@ -691,6 +691,13 @@ M movers/lsm_sitemover.py (6)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+73.0
+
+QMUL metadata fix
+- Only adding the stderr to stdout when stderr is non-empty (to revent messed up metadata in storm mover), in run() (TimedCommand)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 todo: remove the explicit usages of schedconfig.lfchost and replace with an experiment specific method (getFileCatalog())
