--- a/CHANGES
+++ b/CHANGES
@@ -698,6 +698,7 @@ QMUL metadata fix
 
 Processes
 - Some minor cleanup; removed unused printProcessTree() + import of subprocess (processes)
+- Corrected log message for SIGKILL in killProcesses() (processes)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
