--- a/CHANGES
+++ b/CHANGES
@@ -691,10 +691,14 @@ M movers/lsm_sitemover.py (6)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-73.0
+72.10 - HOTFIX
 
 QMUL metadata fix
 - Only adding the stderr to stdout when stderr is non-empty (to revent messed up metadata in storm mover), in run() (TimedCommand)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+73.0
 
 Processes
 - Some minor cleanup; removed unused printProcessTree() + import of subprocess (processes)
